--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "workshopjest",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/Murakmiyuji/workshopJest#readme",
   "description": "",
   "devDependencies": {
+    "jest": "^30.1.3",
     "typescript": "^5.9.2"
   }
 }
