feat: Criei as camadas de Repositorio, Serviço e Validação. Criei o Banco de Dados pelo Prisma, mas nos testes estamos usando mocks do jest aparentemente (estudar melhor isso). Implementei somente a entidade Jogador e suas camadas.

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,7 @@ lib/
 # Lock files (manter apenas um)
 # package-lock.json  # descomente se usar yarn
 # yarn.lock          # descomente se usar npm
+
+/src/generated/prisma
+
+/src/generated/prisma
