--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "description": "",
   "devDependencies": {
     "jest": "^30.1.3",
+    "prisma": "^6.15.0",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.15.0"
   }
 }
