--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/Murakmiyuji/workshopJest#readme",
   "description": "",
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "jest": "^30.1.3",
+    "jest-environment-node": "^30.1.2",
     "prisma": "^6.15.0",
     "typescript": "^5.9.2"
   },
